# prime-generator

./: Cargo.toml  LICENSE  README.md  wrangler.toml
src/: lib.rs
