[package]
name = "prime-generator"
version = "0.1.0"
authors = ["Patrick Robinson <patrick.robinson@envato.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
serde_json = "1.0.67"
serde = "1"
reqwest = { version = "0.11.9", features = ["blocking"] }
sha2 = "0.10.2"
hex = "0.4.3"
rand_chacha = "0.3.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-primes = "0.3.0"
num-traits = "0.2.14"
num = { version = "0.4.0", default-features = false }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
